--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ pymysql
 ipython-sql
 mysqlclient
 pandasql==0.7.3
-plotly_express==0.4
+plotly_express
 pandas
 numpy
-dash==2.6.0
+dash
 dash-renderer
 dash-html-components
 dash-core-components
-dash-bootstrap-components==1.2.0
+dash-bootstrap-components
 gunicorn
 sqlalchemy==1.4.46
